--- a/popup/css/index.css
+++ b/popup/css/index.css
@@ -14,24 +14,29 @@ body {
 	width: 600px;
 	height: 318px;
 	background: #fff;
+
+	font-family: 'Open Sans';
 }
 
 header {
 	display: flex;
 	flex-direction: row;
 	padding: 8px;
+	min-height: 28px;
 
 	border-bottom: 1px solid #3498db;
 
 	color: #3498db;
 }
 
-header > h1, header > span {
+header > span {
 	display: inline-block;
 	margin-top: 5px;
 }
 
-h1 {
+header > h1 {
+	display: inline-block;
+	margin-top: 0;
 	margin-bottom: 0;
 	margin-left: 4px;
 	font-weight: 300;
@@ -99,6 +104,28 @@ main {
 #events {
 	overflow: scroll;
 	flex: 1 1;
+}
+
+#events #gpa {
+	display: flex;
+	justify-content: space-around;
+}
+
+#gpa div {
+	text-align: center;
+}
+
+#gpa h3 {
+	margin: 0 0 2px 0;
+	font-size: 12px;
+	font-weight: 300;
+	text-transform: uppercase;
+
+	color: #888;
+}
+
+#gpa span {
+	font-weight: 600;
 }
 
 #events h2 {
